[package]
name = "nobg-web_worker"
version = "0.3.0"
authors = ["Dennis Kobert <dennis@kobert.dev>"]
edition = "2018"
repository = "https://github.com/squirrel-labs/web_worker"
categories = ["concurrency", "config", "wasm"]
keywords = ["wasm", "web", "worker"]
description = "A simple crate implementing web workers to run rayon-styled concurrent work on wasm."
readme = "README.md"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
rayon = "1.1.0"
rayon-core = "1.5.0"
log = '*'

[features]
std_atomics = []
